# AndroidAppTemplate

./: .gitignore  build.gradle  build_config.gradle  config.gradle  config_app.gradle  config_build.gradle  config_product.gradle  gradle.properties  readme  readme.txt  settings.gradle  task.gradle
ExtraFiles/: local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app_welcome/: build.gradle
app_welcome/src/main/: AndroidManifest.xml
base/: build.gradle
base_lib_immersionbar/: build.gradle
base_lib_zxing/: build.gradle
biz_bundle_face/: build.gradle
biz_bundle_mvc/: build.gradle
biz_bundle_mvp/: build.gradle
biz_bundle_mvvm/: build.gradle
bundle-business-mvc/: build.gradle
bundle-business-mvp/: build.gradle
bundle-business-mvvm/: build.gradle
bundle_base/: build.gradle
bundle_business_demo/: build.gradle
bundle_business_mvc/: build.gradle
bundle_business_mvp/: build.gradle
bundle_business_mvvm/: build.gradle
bundle_lib_input/: build.gradle  proguard-rules.pro
bundle_lib_mqtt/: build.gradle
bundle_login/: build.gradle
bundle_main/: build.gradle
bundle_user/: build.gradle
config/: build.gradle
configKey/: ConfigKey.gradle  GenerateConfigKeyTask.gradle
db_server/: build.gradle
face_lib_fdr/: build.gradle
face_lib_opencv/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
gradleWorker/: GradleWorker.gradle  config_key.gradle  dev_config.gradle  publish_all_module.gradle  task.gradle
gradleWorker/buildConfig/: BaseConfigKey.gradle  BundleConfigKey.gradle  BundleRouterConfig.gradle  ModuleBuildConfig.gradle  ModuleMethodKey.gradle  RouterMethodKey.gradle
gradleWorker/buildConfigFile/: BundleConfigKey.gradle  ModuleBuildKey.gradle
gradleWorker/init/: gradle_worker_init.gradle
gradleWorker/task/: GenerateFileTask.gradle  PublishAllModule.gradle  PublishTask.gradle  Task.gradle
gradleWorker/tempCode/: PublishTask_temp.gradle
lib_face_dr/: build.gradle
lib_jni/: build.gradle
lib_jni/src/main/cpp/: CMakeLists.txt  GpioPort.cpp  JNIManager.cpp  SerialPort.cpp  message.c
lib_jni/src/main/cpp/head/include/: videobuffer.h
lib_jni/src/main/cpp/include/: GpioPort.h  JniLog.h  PublicType.h  SerialPort.h  includes.h  message.h
lib_opencv/: build.gradle
lib_opencv/java/: AndroidManifest.xml
resource/: build.gradle
router/: build.gradle
signapk/common/: template.jks
tool/: build.gradle
(+2661 files in other folders)
